feat: adds `Users` flow
